[gd_scene load_steps=4 format=3 uid="uid://bncdqhr0e5dl3"]

[ext_resource type="Script" uid="uid://bcx7vwhava3n7" path="res://resources/systems/level/loader/LevelLoaderSystem.gd" id="1_5ci7i"]
[ext_resource type="Texture2D" uid="uid://dyu03q0nq84mo" path="res://icon.svg" id="2_mfy47"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tcvbu"]
radius = 11.0

[node name="NextLevel" type="Area2D" groups=["Triggers"]]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_5ci7i")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.21875, 0.21875)
texture = ExtResource("2_mfy47")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tcvbu")
debug_color = Color(0.613247, 0.531386, 0.232663, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
